Changes to Structure

--- a/Discussion_Week_5_Wednesday.ipynb
+++ b/Discussion_Week_5_Wednesday.ipynb
@@ -2,12 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "sys.path.append(\"scripts\") "
+    "!git clone https://github.com/Stephen-Robbins/Math_of_Finance.git\n",
+    "\n",
+    "# Optional: Change directory to the repository folder (if needed)\n",
+    "%cd Math_of_Finance\n"
    ]
   },
   {
