--- a/Discussion_Week_5_Wednesday.ipynb
+++ b/Discussion_Week_5_Wednesday.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
     }
    ],
    "source": [
-    "from plot import plot_gbm_path\n",
+    "from scripts.plot import plot_gbm_path\n",
     "\n",
     "# Plot a simulated GBM path\n",
     "t, S_paths = plot_gbm_path(S0=100, mu=0.07, sigma=0.3, T=1, N=252,  n_paths=1)\n"
