--- a/Midterm_2_Review.ipynb
+++ b/Midterm_2_Review.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,10 +11,10 @@
     "import sys\n",
     "\n",
     "# Clone the repository\n",
-    "#!git clone https://github.com/Stephen-Robbins/Math_of_Finance.git\n",
-    "\n",
+    "!git clone https://github.com/Stephen-Robbins/Math_of_Finance.git\n",
+    "Midterm\n",
     "# Change directory to the repository's root\n",
-    "#%cd Math_of_Finance\n",
+    "%cd Math_of_Finance\n",
     "\n",
     "# --- Important: Add the 'scripts' directory to Python's search path ---\n",
     "# Get the absolute path to the 'scripts' folder. This is crucial for portability.\n",
@@ -29,14 +29,38 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    Metric     Value\n",
+      "     Price 10.450584\n",
+      "     Delta  0.636831\n",
+      "     Gamma  0.018762\n",
+      "     Theta -6.414028\n",
+      "      Vega 37.524035\n",
+      "       Rho 53.232482\n",
+      "Volatility  0.200000\n",
+      "Lognormal stats:\n",
+      "Cdf: 0.4404\n",
+      "Pdf: 0.0197\n",
+      "Mean: 105.1271\n",
+      "Median: 103.0455\n",
+      "Mode: 99.0050\n",
+      "Variance: 451.0288\n"
+     ]
+    }
+   ],
    "source": [
-    "from finance import Option\n",
+    "from finance import Option, gbm_lognormal_stats\n",
     "\n",
     "call_option = Option(S=100, E=100, T=1, r=0.05, sigma=0.2, option_type='call')\n",
     "print(call_option.summary())  \n",
     "\n",
     "\n",
+    "print('Lognormal stats:')\n",
+    "gbm_lognormal_stats(x=100, X_t=100, mu=0.05, sigma=0.2, T_minus_t=1)\n",
     "\n"
    ]
   },
@@ -120,7 +144,13 @@
    "source": [
     "### Problem 4 \n",
     "\n",
-    "John buys an put option for apple stock"
+    "John buys an at the money put option for Apple stock. Apple Inc. (AAPL) stock is currently trading at \\$150. The stock follows a geometric Brownian motion (GBM) with:\n",
+    "- **Drift (μ):** 5% per year\n",
+    "- **Volatility (σ):** 25% per year\n",
+    "- **Time Horizon (T):** 1 year\n",
+    "\n",
+    "and $r=0.05$. What is the probabiltiy that John makes a profit? (We assume all assumptions of black scholes.)\n",
+    "\n"
    ]
   },
   {
@@ -131,13 +161,6 @@
     "\n",
     "Greg did not take Math 176/Econ 135. However his uncle works at J.P Morgan and Greg got a job there pricing american put options. Greg thinks american put options are priced the same way as european put options and thus uses the black scholes formula to price the american options. You observe $C_E(S, t)=\\$10$. The time to expiration $T-t$ is 1 year and the interest rate is $5\\%$. For wich values of $E$ does there exist an oppertunity for arbitrage?\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
