added_answers_for_midterm

--- a/Midterm_2_Review.ipynb
+++ b/Midterm_2_Review.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -71,6 +71,23 @@
     "### Problem 1\n",
     "\n",
     "An option has a delta of $0.60$ and a gamma of $0.04$. If the underlying asset increases by $\\$2$, estimate the change in the option’s price using a second-order Taylor series approximation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.28\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(0.6*2+1/2*0.04*2**2)"
    ]
   },
   {
@@ -119,6 +136,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "911.7765765097093 94.0811160019139 2.0279949075285892 -2721.006662038746 3732.744484677958 3300.0977059443444\n"
+     ]
+    }
+   ],
+   "source": [
+    "from finance import Option\n",
+    "\n",
+    "A = Option(S=150, E=155, T=0.25, r=0.02, sigma=0.3, option_type='call')\n",
+    "B= Option(S=150, E=145, T=0.25, r=0.02, sigma=0.3, option_type='put')\n",
+    "C= Option(S=150, E=160, T=0.25, r=0.02, sigma=0.35, option_type='call')\n",
+    "\n",
+    "port_price=100*A.price()-50*B.price()+75*C.price()\n",
+    "port_delta=100*A.delta()-50*B.delta()+75*C.delta()\n",
+    "port_gamma=100*A.gamma()-50*B.gamma()+75*C.gamma()\n",
+    "port_theta=100*A.theta()-50*B.theta()+75*C.theta()\n",
+    "port_vega=100*A.vega()-50*B.vega()+75*C.vega()\n",
+    "port_rho=100*A.rho()-50*B.rho()+75*C.rho()\n",
+    "\n",
+    "print(port_price, port_delta, port_gamma, port_theta, port_vega, port_rho)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -139,6 +186,86 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stats for 140:\n",
+      "Cdf: 0.3188\n",
+      "Pdf: 0.0102\n",
+      "Mean: 162.4931\n",
+      "Median: 157.4937\n",
+      "Mode: 147.9516\n",
+      "Variance: 1702.9113\n",
+      "Stats for 170:\n",
+      "Cdf: 0.6201\n",
+      "Pdf: 0.0090\n",
+      "Mean: 162.4931\n",
+      "Median: 157.4937\n",
+      "Mode: 147.9516\n",
+      "Variance: 1702.9113\n",
+      "Answer\n",
+      "0.3013\n"
+     ]
+    }
+   ],
+   "source": [
+    "from finance import  gbm_lognormal_stats\n",
+    "print('Stats for 140:')\n",
+    "gbm_lognormal_stats(x=140, X_t=150, mu=0.08, sigma=0.25, T_minus_t=1)\n",
+    "\n",
+    "print('Stats for 170:')\n",
+    "gbm_lognormal_stats(x=170, X_t=150, mu=0.08, sigma=0.25, T_minus_t=1)\n",
+    "print('Answer')\n",
+    "print(0.6201-0.3188)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Part b\n",
+      "Stats for 140:\n",
+      "Cdf: 0.3644\n",
+      "Pdf: 0.0089\n",
+      "Mean: 162.4931\n",
+      "Median: 155.3430\n",
+      "Mode: 141.9728\n",
+      "Variance: 2486.5773\n",
+      "Stats for 170:\n",
+      "Cdf: 0.6181\n",
+      "Pdf: 0.0075\n",
+      "Mean: 162.4931\n",
+      "Median: 155.3430\n",
+      "Mode: 141.9728\n",
+      "Variance: 2486.5773\n",
+      "Answer\n",
+      "0.2537\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "print('Part b')\n",
+    "print('Stats for 140:')\n",
+    "gbm_lognormal_stats(x=140, X_t=150, mu=0.08, sigma=0.30, T_minus_t=1)\n",
+    "\n",
+    "print('Stats for 170:')\n",
+    "gbm_lognormal_stats(x=170, X_t=150, mu=0.08, sigma=0.30, T_minus_t=1)\n",
+    "print('Answer')\n",
+    "print(0.6181- 0.3644)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -154,6 +281,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cdf: 0.3501\n",
+      "Pdf: 0.0107\n",
+      "Mean: 157.6907\n",
+      "Median: 152.8390\n",
+      "Mode: 143.5790\n",
+      "Variance: 1603.7415\n"
+     ]
+    }
+   ],
+   "source": [
+    "from finance import Option, gbm_lognormal_stats\n",
+    "\n",
+    "\n",
+    "A = Option(S=150, E=150, T=1, r=0.05, sigma=0.25, option_type='put')\n",
+    "premium=A.price()\n",
+    "\n",
+    "x=150-premium\n",
+    "\n",
+    "gbm_lognormal_stats(x=x, X_t=150, mu=0.05, sigma=0.25, T_minus_t=1)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -161,6 +318,24 @@
     "\n",
     "Greg did not take Math 176/Econ 135. However his uncle works at J.P Morgan and Greg got a job there pricing american put options. Greg thinks american put options are priced the same way as european put options and thus uses the black scholes formula to price the american options. You observe $C_E(S, t)=\\$10$. The time to expiration $T-t$ is 1 year and the interest rate is $5\\%$. For wich values of $E$ does there exist an oppertunity for arbitrage?\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Solution\n",
+    "\n",
+    "If a american put is priced like a european put, arbitrage exists if $P_E(S, t)<E-S$, i.e. if the put price is less than the intrinsic value. Rearranging the put call parity, we see $$  P_E(S, t)-C_E(S, t)-E\\cdot(e^{-r(T-t)}-1) =  E - S .$$\n",
+    "\n",
+    "So arbitrage exists if $C_E(S, t)+E\\cdot(e^{-r(T-t)}-1)<0$.\n",
+    "\n",
+    "Plugging in our numbers, arbitrage exists if $E>\\$ 205.04$.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
