--- a/Final_Review_1.ipynb
+++ b/Final_Review_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,10 +11,10 @@
     "import sys\n",
     "\n",
     "# Clone the repository\n",
-    "#!git clone https://github.com/Stephen-Robbins/Math_of_Finance.git\n",
+    "!git clone https://github.com/Stephen-Robbins/Math_of_Finance.git\n",
     "\n",
     "# Change directory to the repository's root\n",
-    "#%cd Math_of_Finance\n",
+    "%cd Math_of_Finance\n",
     "\n",
     "# --- Important: Add the 'scripts' directory to Python's search path ---\n",
     "# Get the absolute path to the 'scripts' folder. This is crucial for portability.\n",
