Fixed Error n annualized_Volatiity

--- a/Discussion_Week_9.ipynb
+++ b/Discussion_Week_9.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,10 +11,10 @@
     "import sys\n",
     "\n",
     "# Clone the repository\n",
-    "!git clone https://github.com/Stephen-Robbins/Math_of_Finance.git\n",
+    "#!git clone https://github.com/Stephen-Robbins/Math_of_Finance.git\n",
     "\n",
     "# Change directory to the repository's root\n",
-    "%cd Math_of_Finance\n",
+    "#%cd Math_of_Finance\n",
     "\n",
     "# --- Important: Add the 'scripts' directory to Python's search path ---\n",
     "# Get the absolute path to the 'scripts' folder. This is crucial for portability.\n",
@@ -243,10 +243,15 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.3905148940766109\n"
+     "ename": "AttributeError",
+     "evalue": "'numpy.ndarray' object has no attribute 'pct_change'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mfinance\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m annualized_volatility\n\u001b[1;32m      2\u001b[0m returns \u001b[38;5;241m=\u001b[39m[\u001b[38;5;241m142.50\u001b[39m, \u001b[38;5;241m145.75\u001b[39m, \u001b[38;5;241m144.30\u001b[39m, \u001b[38;5;241m146.80\u001b[39m, \u001b[38;5;241m149.25\u001b[39m, \u001b[38;5;241m147.90\u001b[39m, \u001b[38;5;241m150.40\u001b[39m, \u001b[38;5;241m152.65\u001b[39m, \u001b[38;5;241m151.20\u001b[39m, \u001b[38;5;241m153.80\u001b[39m]\n\u001b[0;32m----> 3\u001b[0m annualized_volatility, daily_volatility, daily_mean\u001b[38;5;241m=\u001b[39m\u001b[43mannualized_volatility\u001b[49m\u001b[43m(\u001b[49m\u001b[43mreturns\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(annualized_volatility)\n",
+      "File \u001b[0;32m~/Documents/Github/Math_of_Finance/scripts/finance.py:107\u001b[0m, in \u001b[0;36mannualized_volatility\u001b[0;34m(returns, trading_days)\u001b[0m\n\u001b[1;32m     79\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m     80\u001b[0m \u001b[38;5;124;03mEstimate the annualized volatility of a stock based on its daily returns.\u001b[39;00m\n\u001b[1;32m     81\u001b[0m \u001b[38;5;124;03m\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    104\u001b[0m \u001b[38;5;124;03m- daily_mean: The computed daily mean log return (μ_d).\u001b[39;00m\n\u001b[1;32m    105\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    106\u001b[0m \u001b[38;5;66;03m# Convert the input to a NumPy array in case it's a list.\u001b[39;00m\n\u001b[0;32m--> 107\u001b[0m returns \u001b[38;5;241m=\u001b[39m  \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43marray\u001b[49m\u001b[43m(\u001b[49m\u001b[43mreturns\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpct_change\u001b[49m()\n\u001b[1;32m    110\u001b[0m \u001b[38;5;66;03m# Compute log returns: ln(1 + R_n)\u001b[39;00m\n\u001b[1;32m    111\u001b[0m log_returns \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mlog(\u001b[38;5;241m1\u001b[39m \u001b[38;5;241m+\u001b[39m returns)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'pct_change'"
      ]
     }
    ],
